WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146958
[CoordinatedGraphics] Possible wrong rendering with scrolling
https://bugs.webkit.org/show_bug.cgi?id=146958
Summary
[CoordinatedGraphics] Possible wrong rendering with scrolling
Ryuan Choi
Reported
2015-07-14 22:39:09 PDT
While
r174261
fixing build break, there is mistake that flush contents layer instead of overlay layer.
Attachments
Patch
(2.03 KB, patch)
2015-07-14 22:42 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2015-07-14 22:42:15 PDT
Created
attachment 256824
[details]
Patch
Gyuyoung Kim
Comment 2
2015-07-14 22:46:09 PDT
Comment on
attachment 256824
[details]
Patch As we talked with this issue, I did mistake in
r174261
. Thank you for fixing !
WebKit Commit Bot
Comment 3
2015-07-14 23:44:43 PDT
Comment on
attachment 256824
[details]
Patch Clearing flags on attachment: 256824 Committed
r186833
: <
http://trac.webkit.org/changeset/186833
>
WebKit Commit Bot
Comment 4
2015-07-14 23:44:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug