[CoordinatedGraphics] Possible wrong rendering with scrolling https://bugs.webkit.org/show_bug.cgi?id=146958

Reviewed by Gyuyoung Kim.

While r174261 fixing build break, there is some mistake that flushes contents layer
instead of overlay layer.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::didFlushRootLayer):


Canonical link: https://commits.webkit.org/165018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186833 268f45cc-cd09-0410-ab3c-d52691b4dbfc